--- a/experience.html
+++ b/experience.html
@@ -77,7 +77,8 @@ As CFO, I manage and monitor central finances & reimbursements, and send out pri
 <div class="xp-r1-info">
   <h2>Superposition Granite Bay </h2>
   <h3> Co-President (2022-Present) </h3>
-  <p style="font-size: 14px;"> INTEGIRLS is a global nonprofit organization that’s behind the math competitions and virtual puzzle hunts for girls and non-binary students affected by (trans)misogyny. Both are team-based competitions that encourage contestants to work together to solve difficult questions.
+  <p style="font-size: 14px;"> Superposition Granite Bay is a chapter of the global nonprofit, Superposition that I co-founded! In this club, we invite guest speakers to inspire and empower females interested in STEM fields. 
+    In addition, we host annual mathalons to encourage younger females & non-binary individuals in STEM, and to carry on the goal of minimizing the gender gap in STEM!
  </p>
 </div>
 </div>
