--- a/experience.html
+++ b/experience.html
@@ -90,7 +90,8 @@ As CFO, I manage and monitor central finances & reimbursements, and send out pri
 <div class="xp-r1-info">
   <h2>SCS Math Olympiad </h2>
   <h3> Associate Coach (2021-Present) </h3>
-  <p style="font-size: 14px;">INTEGIRLS Bay Area is the Bay Area branch of INTEGIRLS, that aims to bridge the gender gap in math! We host biannual math competitions specifically for female & non-binary individuals, and various other events to foster a community for minorities in math. As Vice President, I help manage the team and make key decisions to continuously improve our organization! </p>
+  <p style="font-size: 14px;">Sierra Chinese School’s Math Olympiad is a program to help younger students develop a love for competition math. 
+    I’ve taught both the 6th Grade class and the 8th Grade class, and I’ve taught over 50 students. In addition to weekly lessons, I also grade the homework and host weekly study halls for homework help! </p>
 </div>
 </div>
 
