added read more buttons

--- a/experience.html
+++ b/experience.html
@@ -48,10 +48,11 @@
 <div class="xp-r1-info">
   <h2>INTEGIRLS Bay Area </h2>
   <h3> Vice President (2021-Present) </h3>
-  <p style="font-size: 14px;">INTEGIRLS Bay Area is the Bay Area branch of INTEGIRLS, that aims to bridge the gender gap in math by hosting biannual math competitions specifically for female & non-binary individuals, and various other events to foster a community for minorities in math. 
+  <p style="font-size: 14px;">INTEGIRLS Bay Area is the Bay Area branch of INTEGIRLS, that aims to bridge the gender gap in math by hosting biannual math competitions specifically for female & non-binary individuals, and various other events to foster a community for minorities in math<span id="dots">...</span>
 <br>
 <br>
-As Vice President, I help manage the team and make key decisions to continuously improve our organization! </p>
+<span id="more"> As Vice President, I help manage the team and make key decisions to continuously improve our organization! </span></p>
+<button onclick="myFunction()" id="myBtn">Read More</button>
 </div>
 </div>
 
@@ -61,12 +62,12 @@ As Vice President, I help manage the team and make key decisions to continuously
 </div>
 <div class="xp-r1-info">
   <h2>INTEGIRLS</h2>
-  <h3> CFO (2022-Present) </h3>
-  <p style="font-size: 14px;"> INTEGIRLS is a global nonprofit organization that’s behind the math competitions and virtual puzzle hunts for girls and non-binary students affected by (trans)misogyny. Both are team-based competitions that encourage contestants to work together to solve difficult questions.
+  <h3> CFO & Website Manager (2022-Present)</h3>
+  <p style="font-size: 14px;"> INTEGIRLS is a global nonprofit organization that’s behind the math competitions and virtual puzzle hunts for girls and non-binary students affected by (trans)misogyny. Both are team-based competitions that encourage contestants to work together to solve difficult questions<span id="dots1">...</span>
 <br>
 <br>
-As CFO, I manage and monitor central finances & reimbursements, and send out prizes & awards. In addition, I help with sponsorships, and most recently, I helped INTEGIRLS secure $6500 from Jane Street.
- </p>
+<span id="more1">As CFO, I manage and monitor central finances & reimbursements, and send out prizes & awards. In addition, I help with sponsorships, and most recently, I helped INTEGIRLS secure $6500 from Jane Street. </span></p>
+<button onclick="myFunction1()" id="myBtn1">Read More</button>
 </div>
 </div>
 
@@ -77,9 +78,11 @@ As CFO, I manage and monitor central finances & reimbursements, and send out pri
 <div class="xp-r1-info">
   <h2>Superposition Granite Bay </h2>
   <h3> Co-President (2022-Present) </h3>
-  <p style="font-size: 14px;"> Superposition Granite Bay is a chapter of the global nonprofit, Superposition that I co-founded! In this club, we invite guest speakers to inspire and empower females interested in STEM fields. 
-    In addition, we host annual mathalons to encourage younger females & non-binary individuals in STEM, and to carry on the goal of minimizing the gender gap in STEM!
- </p>
+  <p style="font-size: 14px;"> Superposition Granite Bay is a chapter of the global nonprofit, Superposition that I co-founded! In this club, we invite guest speakers to inspire and empower females interested in STEM fields<span id="dots2">...</span>
+  <br>
+  <br>
+  <span id="more2">In addition, we host annual mathalons to encourage younger females & non-binary individuals in STEM, and to carry on the goal of minimizing the gender gap in STEM!</span></p>
+    <button onclick="myFunction2()" id="myBtn2">Read More</button>
 </div>
 </div>
 
@@ -91,7 +94,11 @@ As CFO, I manage and monitor central finances & reimbursements, and send out pri
   <h2>SCS Math Olympiad </h2>
   <h3> Associate Coach (2021-Present) </h3>
   <p style="font-size: 14px;">Sierra Chinese School’s Math Olympiad is a program to help younger students develop a love for competition math. 
-    I’ve taught both the 6th Grade class and the 8th Grade class, and I’ve taught over 50 students. In addition to weekly lessons, I also grade the homework and host weekly study halls for homework help! </p>
+    I’ve taught both the 6th Grade class and the 8th Grade class, and I’ve taught over 50 students<span id="dots3">...</span>
+    <br>
+    <br>
+    <span id="more3">In addition to weekly lessons, I also grade the homework and host weekly study halls for homework help!</span></p>
+    <button onclick="myFunction3()" id="myBtn3">Read More</button>
 </div>
 </div>
 
