large table mobile responsive

--- a/experience.html
+++ b/experience.html
@@ -108,7 +108,7 @@
   
   
 <div class="footer">
-<p style="text-align: center; padding-bottom: 1.5%;"> © 2022 Michelle Han <i class="fa-regular fa-heart"></i> || Experience Page design inspired by <a style="color: black;" href="http://stephsu.me/#experience" target="_blank">Stephanie Su</a>!</p>
+<p style="text-align: center; padding-bottom: 1.5%;"> © 2022 Michelle Han <i class="fa-regular fa-heart"></i></p>
 </div>
 
 <script>
