--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 </nav>
 
 <div style="text-align: center; padding-top: 7%;" class="contact-me">
-  <img src="avatar_me.png" width=220px>
+  <img src="avatar_me.png" width="200px">
   <h3 style="font-size: 24px; font-weight: 800;"> Contact Me </h3>
   <h4 style="font-weight: 500;"> Email me at <span class="email" style="color: #6C73FF; "><i class="fa-regular fa-envelope"></i> <a style="text-decoration: none; color:#6C73FF;" href="mailto: michellehan2007agt@gmail.com">michellehan2007agt@gmail.com</a></span> or at the form below! </h4>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScr-C7mIC7RFq9v_6dtSSe6mQPF1-E2vqNjUMi-HvTkJcgJhg/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
