--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
   <button class="start-btn2"> <a style="text-decoration: none;" href="portfolio.html"> <i class="fa-solid fa-arrow-up-right-from-square"></i>  Porfolio</a></button>
     <div class="footnote box">
   <p>Find me on </p>
-    <a class="social-icon" href="https://www.instagram.com/michellee_han/" target="_blank">
-  <img style="width: 35px;" alt="Michelle's Instagram" class="social-icon" src="social-icons/insta1.jpg">
+    <a class="social-icon ig" href="https://www.instagram.com/michellee_han/" target="_blank">
+  <img alt="Michelle's Instagram" class="social-icon" src="social-icons/insta1.jpg">
     </a>
     <a class="social-icon" href="https://www.linkedin.com/in/michellehhan/" target="_blank">
     <img class="social-icon" src="social-icons/linkedin.PNG">
