--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
 
 <div class="titles">
 <h1 class="top"> Portfolio </h1>
-<h2 class="centered-half" style="width: 40%; font-size: 16px; margin-top: -1.5%;"> Proficient with HTML & CSS and Python, currently learning C++ and Javascript. Check out some of my projects below! </h2>
+<h2 class="centered-half" style="width: 40%; margin-top: -1.5%;"> Proficient with HTML & CSS and Python, currently learning C++ and Javascript. Check out some of my projects below! </h2>
 </div>
 
 <div class="row1">
