small tablet responsive

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <h3> Sophomore at Granite Bay High School <br> interested in technology, mathematics, and business! </h3>
   <button class="start-btn1"> <a style="text-decoration: none;" href="contact.html">Contact Me </a> </button>
   <button class="start-btn2"> <a style="text-decoration: none;" href="portfolio.html"> <i class="fa-solid fa-arrow-up-right-from-square"></i>  Porfolio</a></button>
-    <div class="footnote box">
+    <div class="footnote box1">
   <p>Find me on </p>
     <a class="social-icon ig" href="https://www.instagram.com/michellee_han/" target="_blank">
   <img alt="Michelle's Instagram" class="social-icon" src="social-icons/insta1.jpg">
