--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <link rel="icon" type="image/x-icon" href="avatar_me.png">
-  <script src="script.js"></script>
+  <!-- <script src="script.js"></script> -->
+
 
 </head>
   
@@ -19,12 +20,17 @@
   
   <script src="https://kit.fontawesome.com/bc9054cdaf.js" crossorigin="anonymous"></script>
 
-<nav>
+<nav id="menu">
 <div class="navbar-links" id="navigation">
   <a class="navbar-a current" href="contact.html"> Contact Me </a>
   <a class="navbar-a current" href="experience.html"> Experience</a>
   <a class="navbar-a current" href="portfolio.html"> Portfolio </a>
 <a class="navbar-a current" href="about.html"> About Me </a>
+<div class="navbar-right">
+<div class="menu-btn">
+  <div class="menu-btn__burger"></div>
+</div>
+</div>
 </div>
 <div class="logo box">
 <img src="avatar_me.png" style="width:45px;">
@@ -65,6 +71,7 @@
 </div>
 
 
+<script src="script.js"></script>
 
   
 </body>
