--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 <h1 class="top" style="text-align: center;"> <span class="highlight big"> About Me! </span></h1>
 
 <div class="fun-pg" style="text-align: center;">
-<img src="me_sitting_full-body-circle-zoom.png" width="17%;">
+<img src="me_circle.png" width="17%;">
 <br>
 </div>
 
@@ -94,8 +94,8 @@
     <button class="fun-pg"> <a href="fun.html"> Fun Page :D </a></button>
   </div> 
   <div class="stack">
-  <img style="margin-bottom: 3%" class="tan" src="about-me/me_siya_debate.JPG" width="100%;"> 
-  <img class="tan" src="about-me/me_tennis.png" width="100%;">
+  <img style="margin-bottom: 3%" class="tan" src="about-me/unnamed.jpg" width="100%;"> 
+  <img class="tan" src="about-me/me_siya_debate.JPG" width="100%;">
   </div>
   </div>
   
