--- a/experience.html
+++ b/experience.html
@@ -73,7 +73,7 @@
 
 <div class="xp-r1 blurple-bg">
 <div class="xp-r1-img">
-<img src="xp-photos/superpos1.jpg">
+<img src="xp-photos/superpos3.jpg">
 </div>
 <div class="xp-r1-info">
   <h2>Superposition Granite Bay </h2>
@@ -88,7 +88,7 @@
 
 <div class="xp-r1 yellow-bg">
 <div class="xp-r1-img">
-<img src="xp-photos/scs1.PNG">
+<img src="xp-photos/phonto (1).jpg">
 </div>
 <div class="xp-r1-info">
   <h2>SCS Math Olympiad </h2>
