--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </div>
   </div>
     <div class="profile-img">
-    <img src="me_sitting_full-body-circle-zoom.png" style="width:70%;">
+    <img src="me_circle.png" style="width:70%;">
   </div>
   </div>
 
