--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,16 @@
 <html>
 
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1XN35RW0N2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1XN35RW0N2');
+</script>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title> Michelle Han // Portfolio </title>
