--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </div>
 </div>
 <div class="logo box">
-<img src="avatar_me.png" style="width:45px;">
+<img class="avatar_me" src="avatar_me.png">
 <a class="michelle" href="index.html"> Michelle Han </a>
 </div>
 </nav>
