--- a/experience.html
+++ b/experience.html
@@ -39,7 +39,7 @@
 <a class="navbar-a" href="about.html"> About Me </a>
 </div>
 <div class="logo box">
-<img src="avatar_me.png" style="width:45px;">
+<img class="avatar_me" src="avatar_me.png" style="width:45px;">
 <a class="michelle" href="index.html"> Michelle Han </a>
 </div>
 </nav>
