--- a/experience.html
+++ b/experience.html
@@ -52,13 +52,29 @@
 </div>
 
 <div class="containerr">
+
+<div class="xp-r1 pink-bg">
+  <div class="xp-r1-img">
+  <img src="xp-photos/integirls3.jpeg">
+  </div>
+  <div class="xp-r1-info">
+    <h2>INTEGIRLS</h2>
+    <h3> Executive Director (2022-Present)</h3>
+    <p style="font-size: 14px;"> INTEGIRLS is a global nonprofit organization that’s behind the math competitions and virtual puzzle hunts for girls and non-binary students affected by (trans)misogyny. Both are team-based competitions that encourage contestants to work together to solve difficult questions<span id="dots1">...</span>
+  <br>
+  <br>
+  <span id="more1">As CFO, I manage and monitor central finances & reimbursements, and send out prizes & awards. In addition, I help with sponsorships, and most recently, I helped INTEGIRLS secure $6500 from Jane Street. </span></p>
+  <button onclick="myFunction1()" id="myBtn1">Read More</button>
+  </div>
+  </div>
+
 <div class="xp-r1 coral-bg">
 <div class="xp-r1-img">
 <img src="xp-photos/integirls1.png">
 </div>
 <div class="xp-r1-info">
   <h2>INTEGIRLS Bay Area </h2>
-  <h3> Vice President (2021-Present) </h3>
+  <h3> Co-President (2021-Present) </h3>
   <p style="font-size: 14px;">INTEGIRLS Bay Area is the Bay Area branch of INTEGIRLS, that aims to bridge the gender gap in math by hosting biannual math competitions specifically for female & non-binary individuals, and various other events to foster a community for minorities in math<span id="dots">...</span>
 <br>
 <br>
@@ -67,27 +83,12 @@
 </div>
 </div>
 
-<div class="xp-r1 pink-bg">
-<div class="xp-r1-img">
-<img src="xp-photos/integirls3.jpeg">
-</div>
-<div class="xp-r1-info">
-  <h2>INTEGIRLS</h2>
-  <h3> CFO & Website Manager (2022-Present)</h3>
-  <p style="font-size: 14px;"> INTEGIRLS is a global nonprofit organization that’s behind the math competitions and virtual puzzle hunts for girls and non-binary students affected by (trans)misogyny. Both are team-based competitions that encourage contestants to work together to solve difficult questions<span id="dots1">...</span>
-<br>
-<br>
-<span id="more1">As CFO, I manage and monitor central finances & reimbursements, and send out prizes & awards. In addition, I help with sponsorships, and most recently, I helped INTEGIRLS secure $6500 from Jane Street. </span></p>
-<button onclick="myFunction1()" id="myBtn1">Read More</button>
-</div>
-</div>
-
 <div class="xp-r1 blurple-bg">
 <div class="xp-r1-img">
 <img src="xp-photos/superpos3.jpg">
 </div>
 <div class="xp-r1-info">
-  <h2>Superposition Granite Bay </h2>
+  <h2>Women in STEM Granite Bay </h2>
   <h3> Co-President (2022-Present) </h3>
   <p style="font-size: 14px;"> Superposition Granite Bay is a chapter of the global nonprofit, Superposition that I co-founded! In this club, we invite guest speakers to inspire and empower females interested in STEM fields<span id="dots2">...</span>
   <br>
@@ -119,7 +120,7 @@
   
   
 <div class="footer">
-<p style="text-align: center; padding-bottom: 1.5%;"> © 2022 Michelle Han <i class="fa-regular fa-heart"></i></p>
+<p style="text-align: center; padding-bottom: 1.5%;"> © 2024 Michelle Han <i class="fa-regular fa-heart"></i></p>
 </div>
 
 <script>
