--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
   <div class="container">
   <div class="start">
   <h2> Hi! I'm Michelle 👋 </h2>
-  <h1> Wesbite Graphic <br> Designer & Developer </h1>
-  <h3> Sophomore at Granite Bay High School <br> interested in technology, mathematics, and business! </h3>
+  <h1>I <span class="htxt-orange">code</span>, <span class="htxt-blue">design</span>, <br> <span class="htxt htxt-pink">develop</span>, & <span class="htxt htxt-coral">lead</span>.</h1>
+  <h3> Senior at Granite Bay High School <br> interested in technology, mathematics, and business! </h3>
   <button class="start-btn1"> <a style="text-decoration: none;" href="contact.html">Contact Me </a> </button>
   <button class="start-btn2"> <a style="text-decoration: none;" href="portfolio.html"> <i class="fa-solid fa-arrow-up-right-from-square"></i>  Porfolio</a></button>
     <div class="footnote box1">
-  <p>Find me on </p>
+  <p>Connect with me on </p>
     <a class="social-icon ig" href="https://www.instagram.com/michellee_han/" target="_blank">
   <img alt="Michelle's Instagram" class="social-icon" src="social-icons/insta1.jpg">
     </a>
@@ -77,7 +77,7 @@
   </div>
 
 <div class="footer">
-<p style="text-align: center; padding-bottom: 1%;"> © 2022 Michelle Han <i class="fa-regular fa-heart"></i> </p>
+<p style="text-align: center; padding-bottom: 1%;"> © 2024 Michelle Han <i class="fa-regular fa-heart"></i> </p>
 </div>
 
 
