--- a/portfolio.html
+++ b/portfolio.html
@@ -44,14 +44,36 @@
 
 <div class="titles">
 <h1 class="top"> Portfolio </h1>
-<h2 class="centered-half" style="width: 40%; margin-top: -1.5%;"> Proficient with HTML & CSS and Python, currently learning C++ and Javascript. Check out some of my projects below! </h2>
+<h2 class="centered-half" style="width: 40%; letter-spacing: 0.3px;"> Proficient with HTML & CSS and Python, currently learning C++ and Javascript. Check out some of my projects below! </h2>
 </div>
 
 <div class="row1">
+  <div class="row1-1" style="text-align: center;">
+  <img class="pink-border" src="/portfolio/medisign1.png">
+  <h3 style="text-align: center; font-size: 25px; font-weight: 700;"> MediSign </h3>  
+  <h4 style="text-align: center; font-size: 14px; font-weight: 500; margin-top: -4%;"> JULY 2024 </h4>
+  <h4> <span class="hc">HTML & CSS</span> <span class="js">Javascript</span><span class="aiml">AI & ML</span></h4>
+  <h4 style="font-weight: 500;"> Final project @ Stanford AI4ALL! Special thanks to mentors Roya Firoozi & Keiko Nagami <3 </h4>
+  
+  <button class="green"><a href="https://github.com/michellehhan/stanford-ai4all-xplane" target="_blank"> Visit Project <i class="fa-solid fa-link"></i> </a></button>  
+  </div>
+  
+  <div class="row1-2" style="text-align: center;">
+    <img src="/portfolio/nutrify1.png">
+    <h3 style="text-align: center; font-size: 25px; font-weight: 700;"> NutrifyAI </h3>  
+    <h4 style="text-align: center; font-size: 14px; font-weight: 500; margin-top: -4%;"> JULY 2024 </h4>
+    <h4> <span class="python">Python</span> <span class="aiml">AI & ML</span></h4>
+    <h4 style="font-weight: 500;"> Final project @ Stanford AI4ALL! Special thanks to mentors Roya Firoozi & Keiko Nagami <3 </h4>
+    
+    <button class="green"><a href="https://github.com/michellehhan/stanford-ai4all-xplane" target="_blank"> Visit Project <i class="fa-solid fa-link"></i> </a></button>  
+    </div>
+    </div>
+
+<div class="row1">
 <div class="row1-1" style="text-align: center;">
-<img src="my_trajectry.gif">
-<h3 style="text-align: center; font-size: 25px; font-weight: 700;"> X-Plane 11 Autonomous Takeoff </h3>  
-<h4 style="text-align: center; font-size: 14px; font-weight: 500; margin-top: -4%;"> JULY 2022 </h4>
+<img src="/portfolio/twotimin1.png">
+<h3 style="text-align: center; font-size: 25px; font-weight: 700;"> Two Timin': Repairing Smart Contracts </h3>  
+<h4 style="text-align: center; font-size: 14px; font-weight: 500; margin-top: -4%;"> JULY 2023 </h4>
 <h4> <span class="python">Python</span> <span class="aiml">AI & ML</span></h4>
 <h4 style="font-weight: 500;"> Final project @ Stanford AI4ALL! Special thanks to mentors Roya Firoozi & Keiko Nagami <3 </h4>
 
@@ -59,14 +81,35 @@
 </div>
 
 <div class="row1-2" style="text-align: center;">
-<img class="pink-border" src="portfolio/ps.png">
-<h3 style="text-align: center; font-size: 25px; font-weight: 700;"> Personal Website </h3>  
-<h4 style="text-align: center; font-size: 14px; font-weight: 500; margin-top: -4%;"> SEPTEMBER 2022 </h4>
-  <h4> <span class="hc">HTML & CSS</span> <span class="js"> Javascript </span></h4>
+<img class="green-border" src="portfolio/community.png">
+<h3 style="text-align: center; font-size: 25px; font-weight: 700;"> commUnity </h3>  
+<h4 style="text-align: center; font-size: 14px; font-weight: 500; margin-top: -4%;"> SEPTEMBER 2023 </h4>
+  <h4> <span class="swift"> Swift </span></h4>
 <h4 style="font-weight: 500; "> Created to highlight my experiences & creativity in ways that LinkedIn and my resume don't. </h4>
 <button class="coral"><a href="michellehhan.github.io" target="_blank"> Visit Website <i class="fa-solid fa-link"></i> </a></button>  
 </div>
 </div>
+
+<div class="row1">
+  <div class="row1-1" style="text-align: center;">
+  <img src="my_trajectry.gif">
+  <h3 style="text-align: center; font-size: 25px; font-weight: 700;"> X-Plane 11 Autonomous Takeoff </h3>  
+  <h4 style="text-align: center; font-size: 14px; font-weight: 500; margin-top: -4%;"> JULY 2022 </h4>
+  <h4> <span class="python">Python</span> <span class="aiml">AI & ML</span></h4>
+  <h4 style="font-weight: 500;"> Final project @ Stanford AI4ALL! Special thanks to mentors Roya Firoozi & Keiko Nagami <3 </h4>
+  
+  <button class="green"><a href="https://github.com/michellehhan/stanford-ai4all-xplane" target="_blank"> Visit Project <i class="fa-solid fa-link"></i> </a></button>  
+  </div>
+  
+  <div class="row1-2" style="text-align: center;">
+  <img class="pink-border" src="portfolio/ps.png">
+  <h3 style="text-align: center; font-size: 25px; font-weight: 700;"> Personal Website </h3>  
+  <h4 style="text-align: center; font-size: 14px; font-weight: 500; margin-top: -4%;"> SEPTEMBER 2022 </h4>
+    <h4> <span class="hc">HTML & CSS</span> <span class="js"> Javascript </span></h4>
+  <h4 style="font-weight: 500; "> Created to highlight my experiences & creativity in ways that LinkedIn and my resume don't. </h4>
+  <button class="coral"><a href="michellehhan.github.io" target="_blank"> Visit Website <i class="fa-solid fa-link"></i> </a></button>  
+  </div>
+  </div>
   
 <div class="row1">
 <div class="row1-1 brown-border" style="text-align: center;">
