--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
 </div>
 </nav>
 
-<h1 class="top" style="padding: 8% 4% 0 11%; font-weight: 500;">  A little bit about me </span></h1>
+<h1 class="top" style="padding: 8% 4% 0 11%; font-weight: 600;">  A little bit about me! </span></h1>
 
 <div class="roo1">
   <div class="roo1text">
