--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
 
 <div class="row1">
   <div class="row1-1" style="text-align: center;">
-  <img class="pink-border" src="/portfolio/medisign1.png">
+  <img class="pink-border" src="portfolio/MediSign.png">
   <h3 style="text-align: center; font-size: 25px; font-weight: 700;"> MediSign </h3>  
   <h4 style="text-align: center; font-size: 14px; font-weight: 500; margin-top: -4%;"> JULY 2024 </h4>
   <h4> <span class="hc">HTML & CSS</span> <span class="js">Javascript</span><span class="aiml">AI & ML</span></h4>
@@ -59,7 +59,7 @@
   </div>
   
   <div class="row1-2" style="text-align: center;">
-    <img src="/portfolio/nutrify1.png">
+    <img class="purp-border" src="/portfolio/nutrify1.png">
     <h3 style="text-align: center; font-size: 25px; font-weight: 700;"> NutrifyAI </h3>  
     <h4 style="text-align: center; font-size: 14px; font-weight: 500; margin-top: -4%;"> JULY 2024 </h4>
     <h4> <span class="python">Python</span> <span class="aiml">AI & ML</span></h4>
@@ -71,7 +71,7 @@
 
 <div class="row1">
 <div class="row1-1" style="text-align: center;">
-<img src="/portfolio/twotimin1.png">
+<img class="blue-border" src="/portfolio/twotimin1.png">
 <h3 style="text-align: center; font-size: 25px; font-weight: 700;"> Two Timin': Repairing Smart Contracts </h3>  
 <h4 style="text-align: center; font-size: 14px; font-weight: 500; margin-top: -4%;"> JULY 2023 </h4>
 <h4> <span class="python">Python</span> <span class="aiml">AI & ML</span></h4>
@@ -136,7 +136,7 @@
 
 
 <div class="footer">
-<p style="text-align: center; padding-bottom: 1.5%; padding-top: 1.5%;"> © 2022 Michelle Han <i class="fa-regular fa-heart"></i> </p>
+<p style="text-align: center; padding-bottom: 1.5%; padding-top: 1.5%;"> © 2024 Michelle Han <i class="fa-regular fa-heart"></i> </p>
 </div>
   
 <script>
