--- a/portfolio.html
+++ b/portfolio.html
@@ -53,9 +53,9 @@
   <h3 style="text-align: center; font-size: 25px; font-weight: 700;"> MediSign </h3>  
   <h4 style="text-align: center; font-size: 14px; font-weight: 500; margin-top: -4%;"> JULY 2024 </h4>
   <h4> <span class="hc">HTML & CSS</span> <span class="js">Javascript</span><span class="aiml">AI & ML</span></h4>
-  <h4 style="font-weight: 500;"> Final project @ Stanford AI4ALL! Special thanks to mentors Roya Firoozi & Keiko Nagami <3 </h4>
+  <h4 style="font-weight: 400; letter-spacing: 0.25px; line-height: 1.5;"> A responsive healthcare platform with real-time ASL translation using machine learning. Winner of the Deloitte Health Equity Challenge ($5000).  </h4>
   
-  <button class="green"><a href="https://github.com/michellehhan/stanford-ai4all-xplane" target="_blank"> Visit Project <i class="fa-solid fa-link"></i> </a></button>  
+  <button class="green"><a href="https://github.com/michellehhan/medisign?tab=readme-ov-file#medisign-" target="_blank"> Visit Project <i class="fa-solid fa-link"></i> </a></button>  
   </div>
   
   <div class="row1-2" style="text-align: center;">
@@ -63,9 +63,9 @@
     <h3 style="text-align: center; font-size: 25px; font-weight: 700;"> NutrifyAI </h3>  
     <h4 style="text-align: center; font-size: 14px; font-weight: 500; margin-top: -4%;"> JULY 2024 </h4>
     <h4> <span class="python">Python</span> <span class="aiml">AI & ML</span></h4>
-    <h4 style="font-weight: 500;"> Final project @ Stanford AI4ALL! Special thanks to mentors Roya Firoozi & Keiko Nagami <3 </h4>
+    <h4 style="font-weight: 400; letter-spacing: 0.25px; line-height: 1.5;"> An AI-powered system for food detection, nutritional analysis, and personalized meal recommendations, using YOLOv8 and Edamam APIs. </h4>
     
-    <button class="green"><a href="https://github.com/michellehhan/stanford-ai4all-xplane" target="_blank"> Visit Project <i class="fa-solid fa-link"></i> </a></button>  
+    <button class="green"><a href="https://arxiv.org/pdf/2408.10532" target="_blank"> Visit Project <i class="fa-solid fa-link"></i> </a></button>  
     </div>
     </div>
 
@@ -75,9 +75,9 @@
 <h3 style="text-align: center; font-size: 25px; font-weight: 700;"> Two Timin': Repairing Smart Contracts </h3>  
 <h4 style="text-align: center; font-size: 14px; font-weight: 500; margin-top: -4%;"> JULY 2023 </h4>
 <h4> <span class="python">Python</span> <span class="aiml">AI & ML</span></h4>
-<h4 style="font-weight: 500;"> Final project @ Stanford AI4ALL! Special thanks to mentors Roya Firoozi & Keiko Nagami <3 </h4>
+<h4 style="font-weight: 400; letter-spacing: 0.25px; line-height: 1.5;"> A two-layered framework for detecting and repairing malicious blockchain smart contracts, reducing vulnerabilities by over 96%. </h4>
 
-<button class="green"><a href="https://github.com/michellehhan/stanford-ai4all-xplane" target="_blank"> Visit Project <i class="fa-solid fa-link"></i> </a></button>  
+<button class="green"><a href="https://ieeexplore.ieee.org/document/10421047" target="_blank"> Visit Project <i class="fa-solid fa-link"></i> </a></button>  
 </div>
 
 <div class="row1-2" style="text-align: center;">
@@ -85,8 +85,8 @@
 <h3 style="text-align: center; font-size: 25px; font-weight: 700;"> commUnity </h3>  
 <h4 style="text-align: center; font-size: 14px; font-weight: 500; margin-top: -4%;"> SEPTEMBER 2023 </h4>
   <h4> <span class="swift"> Swift </span></h4>
-<h4 style="font-weight: 500; "> Created to highlight my experiences & creativity in ways that LinkedIn and my resume don't. </h4>
-<button class="coral"><a href="michellehhan.github.io" target="_blank"> Visit Website <i class="fa-solid fa-link"></i> </a></button>  
+<h4 style="font-weight: 400; letter-spacing: 0.25px; line-height: 1.5;"> A mobile app for staying informed on local community issues, recognized as a Congressional App Challenge winner. </h4>
+<button class="coral"><a href="https://github.com/michellehhan/commUnity?tab=readme-ov-file#community" target="_blank"> Visit Website <i class="fa-solid fa-link"></i> </a></button>  
 </div>
 </div>
 
@@ -96,7 +96,7 @@
   <h3 style="text-align: center; font-size: 25px; font-weight: 700;"> X-Plane 11 Autonomous Takeoff </h3>  
   <h4 style="text-align: center; font-size: 14px; font-weight: 500; margin-top: -4%;"> JULY 2022 </h4>
   <h4> <span class="python">Python</span> <span class="aiml">AI & ML</span></h4>
-  <h4 style="font-weight: 500;"> Final project @ Stanford AI4ALL! Special thanks to mentors Roya Firoozi & Keiko Nagami <3 </h4>
+  <h4 style="font-weight: 400; letter-spacing: 0.25px; line-height: 1.5;"> An algorithm for autonomous plane takeoff simulation, leveraging machine learning and neural networks for precision. </h4>
   
   <button class="green"><a href="https://github.com/michellehhan/stanford-ai4all-xplane" target="_blank"> Visit Project <i class="fa-solid fa-link"></i> </a></button>  
   </div>
@@ -106,20 +106,20 @@
   <h3 style="text-align: center; font-size: 25px; font-weight: 700;"> Personal Website </h3>  
   <h4 style="text-align: center; font-size: 14px; font-weight: 500; margin-top: -4%;"> SEPTEMBER 2022 </h4>
     <h4> <span class="hc">HTML & CSS</span> <span class="js"> Javascript </span></h4>
-  <h4 style="font-weight: 500; "> Created to highlight my experiences & creativity in ways that LinkedIn and my resume don't. </h4>
+  <h4 style="font-weight: 400; letter-spacing: 0.25px; line-height: 1.5; "> Created to highlight my experiences & creativity in ways that LinkedIn and my resume don't. </h4>
   <button class="coral"><a href="michellehhan.github.io" target="_blank"> Visit Website <i class="fa-solid fa-link"></i> </a></button>  
   </div>
   </div>
   
 <div class="row1">
-<div class="row1-1 brown-border" style="text-align: center;">
-<img src="portfolio/bb-ss1.png">
-<h3 style="text-align: center; font-size: 25px; font-weight: 700;"> Better Beauty </h3>  
-<h4 style="text-align: center; font-size: 14px; font-weight: 500; margin-top: -4%;"> AUGUST 2022 </h4>
-  <h4> <span class="hc">HTML & CSS</span> <span class="js"> Javascript </span></h4>
-<h4 style="font-weight: 500; margin-top: -1%;"> Final project @ Kode with Klossy!</h4>
+<div class="row1-1" style="text-align: center;">
+<img class="pink-border" src="portfolio/cq23.png">
+<h3 style="text-align: center; font-size: 25px; font-weight: 700;"> Culture Quest </h3>  
+<h4 style="text-align: center; font-size: 14px; font-weight: 500; margin-top: -4%;"> FEBRUARY 2023 </h4>
+  <h4> <span class="swift"> Swift </span></h4>
+<h4 style="font-weight: 400; letter-spacing: 0.25px; line-height: 1.5;">A culinary exploration app using SwiftUI, featuring recipe views, cultural insights, and nutritional analysis with Swift Charts.</h4>
 
-<button class="pink"><a href="https://betterbeauty.netlify.app/" target="_blank"> Visit Website <i class="fa-solid fa-link"></i> </a></button>
+<button class="pink"><a href="https://github.com/michellehhan/culturequest" target="_blank"> Visit Website <i class="fa-solid fa-link"></i> </a></button>
 </div>
 
 <div class="row1-2" style="text-align: center;">
@@ -129,7 +129,7 @@
 <h3 style="text-align: center; font-size: 25px; font-weight: 700;"> Estée Lauder </h3>  
 <h4 style="text-align: center; font-size: 14px; font-weight: 500; margin-top: -4%;"> AUGUST 2022 </h4>
   <h4> <span class="hc">HTML & CSS</span> <span class="js"> Javascript </span></h4>
-<h4 style="font-weight: 500; margin-top: -1%;"> Estée Lauder Night Hack Challenge, Prize Winner! </h4>
+<h4 style="font-weight: 400; letter-spacing: 0.25px; line-height: 1.5; margin-top: 1%;"> Estée Lauder Night Hack Challenge, 1 of 5 Kode With Klossy Prize Winners! </h4>
 <button class="blue"><a href="https://estee-lauder-1.michellehhan.repl.co/" target="_blank"> Visit Website <i class="fa-solid fa-link"></i> </a></button>
 </div>
 </div>
