about page updates

--- a/about.html
+++ b/about.html
@@ -58,29 +58,30 @@ I’m deeply committed to empowering girls in STEM fields, which has led me to f
   </p>
   <br>
 
-  <h2 style="padding-bottom: 1.2%; text-align: left; font-weight: 700; font-size: 25px;"> photo gallery 💗 </h2>
+  <h2 style="padding-bottom: 1.2%; text-align: left; font-weight: 700; font-size: 25px;"> Visual Highlights 💗 </h2>
 
   <ul class="image-gallery">
-    
-  <li>
-  <img src="photos/me_selfie_hat.jpg">
-  <div class="overlay"><span> me drinking boba :) <br> august 2022 </span></div>
-  </li>
+  
 
   <li>
-  <img src="photos/me_nicole_tower-bridge.jpg">
-  <div class="overlay"><span> nicole & i at tower bridge! <br> august 2022 </span></div>
+  <img src="photos/symp_nyu Large.jpeg">
+  <div class="overlay"><span> Research <br> Symposium @ NYU! <br> August 2024 </span></div>
   </li>
 
    <li>
-  <img src="photos/me_soph_ghiradehlli.jpg">
-  <div class="overlay"><span> sophie & i at ghiradehlli 😋 <br> april 2022 </span></div>
+  <img src="photos/mit.JPG">
+  <div class="overlay"><span> Math Prize <br> for Girls @ MIT <br> Oct 2023 </span></div>
   </li>
 
-   <li>
-  <img src="photos/me_janvi_sunset.JPG">
-  <div class="overlay"><span>janvi & i! <br> august 2022 </span></div>
-  </li>
+  <li>
+    <img src="photos/wistem.jpeg">
+    <div class="overlay"><span> Women in STEM Club @ GBHS <br> Sept 2023 </span></div>
+    </li>
+
+  <li>
+    <img src="photos/IMG_3758 Large.jpeg">
+    <div class="overlay"><span> NCWIT Award <br>Cermeony <br> April 2023 </span></div>
+    </li>
     
   </ul>
   
