--- a/portfolio.html
+++ b/portfolio.html
@@ -130,7 +130,7 @@
 <h4 style="text-align: center; font-size: 14px; font-weight: 500; margin-top: -4%;"> AUGUST 2022 </h4>
   <h4> <span class="hc">HTML & CSS</span> <span class="js"> Javascript </span></h4>
 <h4 style="font-weight: 400; letter-spacing: 0.25px; line-height: 1.5; margin-top: 1%;"> Estée Lauder Night Hack Challenge, 1 of 5 Kode With Klossy Prize Winners! </h4>
-<button class="blue"><a href="https://estee-lauder-1.michellehhan.repl.co/" target="_blank"> Visit Website <i class="fa-solid fa-link"></i> </a></button>
+<button class="blue"><a href="https://esteelauder.netlify.app/" target="_blank"> Visit Website <i class="fa-solid fa-link"></i> </a></button>
 </div>
 </div>
 
