--- a/experience.html
+++ b/experience.html
@@ -30,19 +30,21 @@
 
   
   <script src="https://kit.fontawesome.com/bc9054cdaf.js" crossorigin="anonymous"></script>
-
-<nav>
-<div class="navbar-links">
-  <a class="navbar-a" href="contact.html"> Contact Me </a>
-  <a class="navbar-a" href="experience.html"> Experience</a>
-  <a class="navbar-a" href="portfolio.html"> Portfolio </a>
-<a class="navbar-a" href="about.html"> About Me </a>
-</div>
-<div class="logo box">
-<img class="avatar_me" src="avatar_me.png" style="width:45px;">
-<a class="michelle" href="index.html"> Michelle Han </a>
-</div>
-</nav>
+  <nav>
+    <div class="logo">
+      <img class="avatar_me" src="avatar_me.png" alt="Michelle">
+      <a class="michelle" href="index.html">Michelle Han</a>
+    </div>
+    <div class="navbar-links" id="navigation">
+      <a class="navbar-a" href="about.html">About</a>
+      <a class="navbar-a" href="portfolio.html">Portfolio</a>
+      <a class="navbar-a" href="experience.html">Experience</a>
+      <a class="navbar-a" href="contact.html">Contact</a>
+    </div>
+    <div class="menu-btn">
+      <div class="menu-btn__burger"></div>
+    </div>
+  </nav>
 
 <div class="xp-title">
   
