fixed hamburger menu issues

--- a/experience.html
+++ b/experience.html
@@ -18,8 +18,8 @@
   <title> Michelle Han // Experience </title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="icon" type="image/x-icon" href="avatar_me.png">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="script.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 </head>
   
@@ -119,10 +119,26 @@
   
 </div>
 
-  
+<div class="social-icons" style="text-align: center; padding-top: 2%;">
+  <a class="social-icon" href="https://www.instagram.com/michellee_han/" target="_blank">
+<img style="width: 42px;" alt="Michelle's Instagram" class="social-icon" src="social-icons/insta1.jpg">
+  </a>
+
+    <a class="social-icon" href="https://www.linkedin.com/in/michellehhan/" target="_blank">
+<img style="width: 38px;" alt="Michelle's LinkedIn" class="social-icon" src="social-icons/linkedin.PNG">
+  </a>
+
+      <a class="social-icon" href="https://github.com/michellehhan" target="_blank">
+<img style="width: 38px;" alt="Michelle's Github" class="social-icon" src="social-icons/github.JPG">
+  </a>
+
+        <a class="social-icon" href="mailto:michellehan2007agt@gmail.com" target="_blank">
+<img style="width: 38px;" alt="Michelle's Email" class="social-icon" src="https://cdn-icons-png.flaticon.com/512/561/561127.png">
+  </a>
+</div>
   
 <div class="footer">
-<p style="text-align: center; padding-bottom: 1.5%;"> © 2024 Michelle Han <i class="fa-regular fa-heart"></i></p>
+<p style="text-align: center; padding-bottom: 1.5%; padding-top: 1%;"> &copy; 2025 Michelle Han <i class="fa-regular fa-heart"></i></p>
 </div>
 
 <script>
