--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </div>
 
 <div class="footer">
-<p style="text-align: center; padding-bottom: 1%;"> © 2024 Michelle Han <i class="fa-regular fa-heart"></i> </p>
+<p style="text-align: center; padding-bottom: 1%;">&copy; 2025 Michelle Han <i class="fa-regular fa-heart"></i> </p>
 </div>
 
 
