--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,8 @@
   <title> Michelle Han // Portfolio </title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="icon" type="image/x-icon" href="avatar_me.png">
-  <script src="script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="script.js"></script>
 
 </head>
   
@@ -97,12 +97,12 @@
 <div class="row1">
 <div class="row1-1" style="text-align: center;">
 <img class="blue-border" src="/portfolio/Coming Soon....png">
-<h3 style="text-align: center; font-size: 25px; font-weight: 700;"> Coming Soon... </h3>  
-<h4 style="text-align: center; font-size: 14px; font-weight: 500; margin-top: -4%;"> NOV 2024 </h4>
-<h4> <span class="hc">HTML & CSS</span> <span class="js">Javascript</span> <span class="python">Python</span> <span class="aiml">AI & ML</span></h4>
+<h3 style="text-align: center; font-size: 25px; font-weight: 700;"> Reflexion </h3>  
+<h4 style="text-align: center; font-size: 14px; font-weight: 500; margin-top: -4%;"> FEB 2025 </h4>
+<h4> <span class="swift">Swift</span>  <span class="aiml">AI & ML</span></h4>
 <h4 style="font-weight: 400; letter-spacing: 0.25px; line-height: 1.5;"> Stay tuned! <br> ... </h4>
 
-<button class="green"><a href="#"> Visit Project <i class="fa-solid fa-link"></i> </a></button>  
+<button class="green"><a href="https://github.com/michellehhan/reflexion" target="_blank"> Visit Project <i class="fa-solid fa-link"></i> </a></button>  
 </div>
 
 <div class="row1-2" style="text-align: center;">
@@ -159,9 +159,26 @@
 </div>
 </div>
 
+<div class="social-icons" style="text-align: center; padding-top: 2%;">
+  <a class="social-icon" href="https://www.instagram.com/michellee_han/" target="_blank">
+<img style="width: 42px;" alt="Michelle's Instagram" class="social-icon" src="social-icons/insta1.jpg">
+  </a>
+
+    <a class="social-icon" href="https://www.linkedin.com/in/michellehhan/" target="_blank">
+<img style="width: 38px;" alt="Michelle's LinkedIn" class="social-icon" src="social-icons/linkedin.PNG">
+  </a>
+
+      <a class="social-icon" href="https://github.com/michellehhan" target="_blank">
+<img style="width: 38px;" alt="Michelle's Github" class="social-icon" src="social-icons/github.JPG">
+  </a>
+
+        <a class="social-icon" href="mailto:michellehan2007agt@gmail.com" target="_blank">
+<img style="width: 38px;" alt="Michelle's Email" class="social-icon" src="https://cdn-icons-png.flaticon.com/512/561/561127.png">
+  </a>
+</div>
 
 <div class="footer">
-<p style="text-align: center; padding-bottom: 1.5%; padding-top: 1.5%;"> © 2024 Michelle Han <i class="fa-regular fa-heart"></i> </p>
+<p style="text-align: center; padding-bottom: 1.5%; padding-top: 1%;">&copy; 2025 Michelle Han <i class="fa-regular fa-heart"></i> </p>
 </div>
   
 <script>
