--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,8 @@
   <title> Michelle Han // Contact </title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link rel="icon" type="image/x-icon" href="avatar_me.png">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="script.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 </head>
   
@@ -67,7 +67,7 @@
   <img style="width: 38px;" alt="Michelle's Email" class="social-icon" src="https://cdn-icons-png.flaticon.com/512/561/561127.png">
     </a>
 </div>
-<p style="padding-bottom: 1.5%;"> © 2024 Michelle Han <i class="fa-regular fa-heart"></i> </p>
+<p style="padding-bottom: 1.5%;"> &copy; 2025 Michelle Han <i class="fa-regular fa-heart"></i> </p>
 </div>
   
 <script>
