--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <div class="start">
   <h2> Hi! I'm Michelle 👋 </h2>
   <h1>I <span class="htxt-orange">code</span>, <span class="htxt-blue">design</span>, <br> <span class="htxt htxt-pink">develop</span>, & <span class="htxt htxt-coral">lead</span>.</h1>
-  <h3> Senior at Granite Bay High School <br> interested in technology, mathematics, and business! </h3>
+  <h3> Incoming freshman @ MIT studying <span class="burg">Computer Science, Economics, & Data Science </span> — stitching ideas into interfaces that speak!  </h3>
   <button class="start-btn1"> <a style="text-decoration: none;" href="contact.html">Contact Me </a> </button>
   <button class="start-btn2"> <a style="text-decoration: none;" href="portfolio.html"> <i class="fa-solid fa-arrow-up-right-from-square"></i>  Porfolio</a></button>
     <div class="footnote box1">
@@ -70,7 +70,7 @@
   </div>
   </div>
     <div class="profile-img">
-    <img src="me_circle.png" style="width:70%;">
+    <img src="pfp_FR-modified.png" style="width:70%;">
   </div>
   </div>
 
