--- a/phia.html
+++ b/phia.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Phia Cover Letter</title>
+  <title>Michelle Han // Phia </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -241,7 +241,7 @@
     </p>
     <div class="cta-buttons">
       <a href="/portfolio.html" target="_blank"><i class="fa-solid fa-desktop" style="padding-right: 5px;"></i>  View My Portfolio</a>
-      <a href="/experience.html" target="_blank"><i class="fa-solid fa-up-right-from-square" style="padding-right: 5px;"></i>  View My Resume</a>
+      <a href="https://drive.google.com/file/d/1jhwh0Rf5ABJSGrm_q9qM5GiBuIVV286S/view?usp=sharing" target="_blank"><i class="fa-solid fa-up-right-from-square" style="padding-right: 5px;"></i>  View My Resume</a>
     </div>
   </section>
   <main>
