--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
             <img class="blurp-border" src="/portfolio/Reflexion_homepage.png">
           </div>
           <div class="swiper-slide">
-            <img class="blurp-border" src="/portfolio/VideoEntry_Reflexion.JPG">
+            <img class="blurp-border" src="/portfolio/VideoEntry_Reflexion.jpeg">
           </div>
           <div class="swiper-slide">
             <img class="blurp-border" src="/portfolio/MoodInsights_Reflexion.png">
@@ -149,7 +149,7 @@
   </div>
   
   <div class="row1-2" style="text-align: center;">
-  <img class="pink-border" src="portfolio/ps.png">
+  <img class="pink-border" src="portfolio/ps.jpeg">
   <h3 style="text-align: center; font-size: 25px; font-weight: 700;"> Personal Website </h3>  
   <h4 style="text-align: center; font-size: 14px; font-weight: 500; margin-top: -4%;"> SEPTEMBER 2022 </h4>
     <h4> <span class="hc">HTML & CSS</span> <span class="js"> Javascript </span></h4>
