--- a/phia.html
+++ b/phia.html
@@ -248,13 +248,13 @@
     <section>
       <h3>Why Phia?</h3>
       <p>
-        I’m drawn to Phia’s innovative perspective on fashion: where style meets sustainability and smart shopping becomes second nature. I love that Phia doesn’t just help people save money; it helps them shop with intention, so that impact is prioritized just as much as aesthetics.
+        I’m drawn to Phia’s innovative perspective on fashion: where style meets sustainability and smart shopping becomes second nature. As someone who regularly browses and shops from eBay, Poshmark, and Mercari, I’ve experienced firsthand the thrill of secondhand finds, and seen how meaningful circular fashion can be. The Phia Chrome extension grows that impact brilliantly by surfacing more sustainable choices right where people already shop.
       </p>
       <p>
-        As someone who regularly browses and shops from eBay, Poshmark, and Mercari, I’ve experienced firsthand the thrill of secondhand finds, and seen how meaningful circular fashion can be. The Phia Chrome extension grows that impact brilliantly by surfacing more sustainable choices right where people already shop.
-      </p>
-      <p>
-        What excites me most is Phia's mission: empowering shoppers to buy smarter while extending the lifecycle of garments.  It reframes the idea of “used” as something desirable, curated, and smart. In a space where fast fashion still dominates, that kind of design-first, values-aligned product feels powerful. I’m beyond excited by the opportunity to help engineer Phia’s next chapter as it scales and evolves.
+        What excites me most is Phia's mission to reframe the idea of “used” as something desirable, curated, and smart. In a space where fast fashion still dominates, that kind of design-first, values-aligned product feels powerful. 
+        </p>
+        <p>
+        I know the startup process isn't linear - but being part of a team that embraces that messiness with honesty and collaboration, especially under inspiring women-led leadership is exactly the kind of work I’d be proud to help engineer as Phia scales and evolves.
       </p>
     </section>
     <section>
